@@ -28,8 +28,6 @@
 #  include <config.h>
 #endif
 
-#undef GTK_DISABLE_DEPRECATED
-
 #include <gtk/gtk.h>
 #include <glade/glade.h>
 
